[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "2.33.3"
solana-clap-utils = "2.1.16"
solana-cli-config = "2.1.16"
solana-client = "2.1.16"
solana-logger = "2.1.16"
solana-sdk = "2.1.16"
solana-program = "2.1.16"
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "7.0", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
